--- a/css/style.css
+++ b/css/style.css
@@ -686,8 +686,9 @@ svg.phone-icon {
   fill: var(--color-icon);
   /* цвет заливки иконок СВГ */
 }
-.clients-list:hover .clientage-svg,
-.clients-list:focus .clientage-svg {
+
+.clientage-btn:hover .clientage-svg,
+.clientage-btn:focus .clientage-svg {
   fill: var(--link-color);
   stroke: 1px solid var(--link-color);
   /* при ховере и фокусе цвет иконки СВГ */
@@ -884,10 +885,38 @@ svg.phone-icon {
 .footer-subscribe {
   display: flex;
 
-  /* padding-top: 108px;
-  padding-bottom: 94px; */
+  position: relative;
 
   align-items: flex-start;
+}
+
+/* .footer-subscribe p {
+  position: relative;
+} */
+
+.footer-subscribe input {
+  position: absolute;
+  top: 108px;
+  right: 220px;
+
+  min-width: 358px;
+
+  padding-top: 15px;
+  /* padding-right: 295px; */
+  padding-left: 15px;
+  padding-bottom: 15px;
+
+  background-color: var(--blackout-color);
+
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+}
+
+.footer-subscribe label {
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 
 .button-corection {
@@ -1121,8 +1150,8 @@ svg.phone-icon {
 
 .btn-close {
   position: absolute;
-  top: 15px;
-  right: 15px;
+  top: -12px;
+  right: -12px;
   width: 25px;
   height: 25px;
   border-radius: 50%;
@@ -1132,23 +1161,23 @@ svg.phone-icon {
   cursor: pointer;
 }
 
+.btn-close:hover {
+  
+  fill: var(--link-color);
+}
+
+
 .btn-img {
   position: absolute;
 
-  top: 3px;
-  right: 3px;
+  top: 0;
+  right: 5px;
+
+  width: 18px;
+  height: 18px;
 }
 
-/* img.btn-img:hover {
-  color: var(--link-color);
-  fill: var(--link-color);
-} */
-
-.btn-close:hover {
-  color: var(--link-color);
-  fill: var(--link-color);
-}
-
+  
 .message {
   font-family: "Roboto", sans-serif;
   font-style: normal;
@@ -1157,9 +1186,171 @@ svg.phone-icon {
   line-height: 1.15;
   text-align: center;
   color: var(--main-color);
+  margin-bottom: 30px;
 }
 
-form {
+.comment {
+  padding: 12px 16px;
+}
+
+.form {
   display: flex;
   flex-direction: column;
+  /* width: 448px; */
 }
+
+.form-field {
+  display: flex;
+  align-items: center;
+  /* display: flex;
+  flex-direction: column; */
+  position: relative;
+  margin-bottom: 28px;
+}
+
+.form-label {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 42px;
+
+  transition: transform 250ms linear;
+}
+
+/* бордер без фокуса */
+.form-input { 
+  margin: 0;
+  padding: 12px 10px;
+  padding-left: 42px;
+  border: 1px solid var(--secondary-color);
+  border-radius: 10px;
+  width: 448px;
+}
+/* цвет бордера при фокусе */
+.form-input:focus {
+  outline: none;
+  border-color: var(--link-color);
+}
+/* подъем текста при фокусе и смена цвета */
+.form-input:focus + .form-label,
+.form-input:not(:placeholder-shown) + .form-label {
+  color: var(--link-color);
+  
+  transform: translateY(-200%);
+}
+/* при правильном вводе инпут и бордер синий */
+.form-input:valid:required.form-input:not(:placeholder-shown) {
+  color: var(--link-color);
+  border: 1px solid var(--link-color);
+}
+/* при неправильном вводе инпут серый бордер красный  */
+.form-input:invalid:required.form-input:not(:placeholder-shown){
+  color: var(--secondary-color);
+  border: red solid 3px;
+}
+
+/* .form-input:invalid {
+  color: var(--secondary-color);
+} */
+/* позиционирование иконок свг */
+.input-icon svg{
+  position: absolute;
+  top: 50%;
+  left: 16px;
+
+  transform: translateY(-50%);
+
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+
+  /* color: var(--main-color); */
+}
+
+ .changing-color:focus{
+  outline: none;
+  fill: var(--link-color);
+}
+
+
+/* смена цвета иконок свг при фокусе */
+ .input-icon:focus svg{
+  fill: var(--link-color);
+} 
+/* блок комментариев */
+.form-field textarea {
+  width: 448px;
+  border: 1px solid var(--secondary-color);
+  border-radius: 10px;
+  resize: none;
+}
+
+ textarea:focus{
+    outline: none;
+  border-color: var(--link-color);
+}
+/* прячем старый чек */
+.checkbox {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  position: absolute;
+
+}
+
+.span-icon {
+    display: inline-block;
+/* background-image: url('../images/InlineSprite.svg#src-1'); */
+/* создаем квадрат для чекбокса */
+border: 2px solid var(--main-color);
+border-radius: 4px ;
+/* color: var(--main-color); */
+    /* размеры квадрата */
+  width: 16px;
+  height: 16px;
+
+  margin-right: 8px;
+  
+}
+/* заменяем на скачаный синий чек */
+.checkbox:checked + .span-icon{
+  border-color: var(--link-color);
+
+  background-color: var(--link-color);
+  background-image: url("../images/iconcheck.svg");
+background-origin: content-box;
+background-repeat: no-repeat;
+}
+
+
+.btn-backdrop {
+  /* display: inline-flex; */
+  max-width: 200px;
+
+  margin-right: auto;
+  margin-left: auto;
+  padding: 10px 56px;
+  
+  border-radius: 4px;
+  border-color: transparent;
+  align-items: center;
+  text-decoration: none;
+  color: var(--body-color);
+  background-color: var(--link-color);
+
+  cursor: pointer;
+
+  font-size: 16px;
+  line-height: 1.87;
+}
+
+.btn-backdrop:hover {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.btn-backdrop:disabled,
+.btn-backdrop:disabled:hover{
+  background-color: #757575;
+  border-color: #afb1b8;
+}
+
