--- a/css/style.css
+++ b/css/style.css
@@ -874,7 +874,7 @@ svg.phone-icon {
   padding-top: 72px;
   padding-bottom: 164px;
   margin-left: 0;
-  margin-right: 151px;
+  margin-right: 185px;
   color: var(--body-color);
 
   font-family: "Roboto", sans-serif;
@@ -899,7 +899,7 @@ svg.phone-icon {
   top: 108px;
   right: 220px;
 
-  min-width: 358px;
+  min-width: 350px;
 
   padding-top: 15px;
   /* padding-right: 295px; */
@@ -928,7 +928,7 @@ svg.phone-icon {
   display: inline-flex;
 
   min-width: 200px;
-  padding: 10px 42px 10px 29px;
+  padding: 10px 42px 10px 23px;
   margin-top: 108px;
   border-radius: 4px;
   align-items: center;
@@ -1249,9 +1249,7 @@ svg.phone-icon {
   border: red solid 3px;
 }
 
-/* .form-input:invalid {
-  color: var(--secondary-color);
-} */
+
 /* позиционирование иконок свг */
 .input-icon svg{
   position: absolute;
@@ -1263,20 +1261,24 @@ svg.phone-icon {
   display: inline-block;
   width: 18px;
   height: 18px;
-
-  /* color: var(--main-color); */
+}
+/* .changing-color{
+  fill: var(--main-color);
 }
 
- .changing-color:focus{
+.changing-color:hover{
+  fill: #e8eb3d;
+} */
+ .form-input:focus .changing-color  {
   outline: none;
   fill: var(--link-color);
 }
 
 
 /* смена цвета иконок свг при фокусе */
- .input-icon:focus svg{
+ /* .input-icon:focus svg{
   fill: var(--link-color);
-} 
+}  */
 /* блок комментариев */
 .form-field textarea {
   width: 448px;
@@ -1300,11 +1302,11 @@ svg.phone-icon {
 
 .span-icon {
     display: inline-block;
-/* background-image: url('../images/InlineSprite.svg#src-1'); */
+
 /* создаем квадрат для чекбокса */
 border: 2px solid var(--main-color);
 border-radius: 4px ;
-/* color: var(--main-color); */
+
     /* размеры квадрата */
   width: 16px;
   height: 16px;
@@ -1324,7 +1326,7 @@ background-repeat: no-repeat;
 
 
 .btn-backdrop {
-  /* display: inline-flex; */
+ 
   max-width: 200px;
 
   margin-right: auto;
